[gd_scene load_steps=2 format=3 uid="uid://ckxi2es83skhs"]

[ext_resource type="Script" path="res://prog122h.gd" id="1_wtoii"]

[node name="prog122h" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wtoii")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1148.0
offset_bottom = 390.0

[node name="calc" type="Button" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 483.0
offset_right = 289.0
offset_bottom = 646.0
text = "Calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 483.0
offset_right = 709.0
offset_bottom = 646.0
text = "Clear"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 868.0
offset_top = 483.0
offset_right = 1152.0
offset_bottom = 646.0
text = "Exit"

[connection signal="pressed" from="calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
